Mass lowercasing and first Apoc commit